# yuru-style-video-editor

./: .gitignore  README.md  design.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: AI_PROMPTS.md  DATAMODEL.md  EXPORT.md  PREVIEW.md  README.md  SYNC.md
docs/screenshots/: SCREENSHOTS.md
python/: constraints.txt  requirements.txt  whisper_diarization_runner.py  whisperx_setup.py
python/whisper_diarization_upstream/: diarize.py  diarize_parallel.py  helpers.py
python/whisper_diarization_upstream/diarization/: __init__.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  python_sidecar.rs  runtime_bootstrap.rs
src-tauri/src/commands/: debug_log.rs  export.rs  ffmpeg.rs  mod.rs  project.rs  sidecar.rs  whisperx_probe.rs  whisperx_setup.rs  whisperx_transcribe.rs
src-tauri/src/preview/: clip_server.rs  mod.rs
src/components/ingest/: VideoImportZone.tsx
src/components/layout/: PhaseSidebar.tsx
src/components/panels/: AiApiSettingsButton.tsx  AiApiSettingsModal.tsx  AiApiSettingsPanel.tsx  SpeakerPanel.tsx  (+2 more)
src/hooks/: useAIProcess.ts  useAnimatedEllipsis.ts  useSpeakerDiarizationFix.ts  useTranscriptDiarizationBinding.ts  useTranscriptWordsEdit.ts  useVideoSeek.ts
src/lib/: speakers.ts
src/pages/: Correction.tsx  Ingest.tsx  PartEditor.tsx
src/store/: aiSettingsStore.ts  previewStore.ts  projectStore.ts  settingsUiStore.ts  styleStore.ts  toastStore.ts
src/types/: index.ts
(+35 files in other folders)
