[package]
name = "yuru-style-video-editor"
version = "0.1.0"
description = "AI-driven dialogue video editor"
authors = ["you"]
edition = "2021"

[lib]
name = "yuru_style_video_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
zip = "2"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
